-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 13
-
Component/s: hotspot
-
b33
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229151 | 14 | Markus Grönlund | P2 | Resolved | Fixed | b09 |
| JDK-8229103 | 13.0.2 | Markus Grönlund | P2 | Resolved | Fixed | b01 |
| JDK-8229093 | 13.0.1 | Markus Grönlund | P2 | Resolved | Fixed | b05 |
| JDK-8230712 | 11.0.6 | Markus Grönlund | P2 | Resolved | Fixed | b01 |
| JDK-8232800 | openjdk8u-jfr-incubator | Jaroslav Bachorík | P2 | Resolved | Fixed |
const_cast<ObjectSampler*>(object_sampler)->set_last_resolved(last);
is now called unconditionally (which is too early).
This means the last install update with type_set information (classes, methods, symbols, etc) will not be installed to the required candidates.
- backported by
-
JDK-8229093 Regression caused by JDK-8214542 not installing complete checkpoint data to candidates
-
- Resolved
-
-
JDK-8229103 Regression caused by JDK-8214542 not installing complete checkpoint data to candidates
-
- Resolved
-
-
JDK-8229151 Regression caused by JDK-8214542 not installing complete checkpoint data to candidates
-
- Resolved
-
-
JDK-8230712 Regression caused by JDK-8214542 not installing complete checkpoint data to candidates
-
- Resolved
-
-
JDK-8232800 Regression caused by JDK-8214542 not installing complete checkpoint data to candidates
-
- Resolved
-
- relates to
-
JDK-8214542 JFR: Old Object Sample event slow on a deep heap in debug builds
-
- Resolved
-