8228834: Regression caused by JDK-8214542 not installing complete checkpoint data to candidates

Reviewed-by: egahlin